(issue#824) Export Sigmah calendar events to iCal format.
Implemented: 
-Added showing share calendar events URL with parameters: 
event type and project id
-Added tool tips to share calendar buttons
-Export servlet is renamed to ExportCalendar
-Added fetching calendar events by the servlet for specified project id.
-Added generation by servlet iCal output with Sigmah calendar events.